# Cilqr

./: .gitignore  CMakeLists.txt  README.md  main.cc  package.xml
algorithm/: planning_node.cc  planning_node.h
algorithm/ilqr/: barrier_function.h  corridor.cc  corridor.h  ilqr_optimizer.cc  ilqr_optimizer.h  tracker.cc  tracker.h  vehicle_model.cc  vehicle_model.h
algorithm/math/: aabox2d.cpp  aabox2d.h  box2d.cpp  box2d.h  line_segment2d.cpp  line_segment2d.h  linear_quadratic_regulator.cc  linear_quadratic_regulator.h  math_utils.cpp  math_utils.h  polygon2d.cpp  polygon2d.h  pose.h  vec2d.cpp
algorithm/params/: planner_config.h  vehicle_param.h
algorithm/planner/: dp_planner.cpp  dp_planner.h  trajectory_planner.cpp  trajectory_planner.h
algorithm/slover/: constraint.h  cost.h  dynamics.h  function.h  ilqr.h  knot_point.h  typedefs.h
algorithm/utils/: discrete_points_math.cc  discretized_trajectory.cpp  discretized_trajectory.h  environment.cpp  environment.h  timer.h
algorithm/visualization/: color.cpp  figure_plot.h  plot.cpp  plot.h
config/: config.rviz
include/: CorridorBuilder2d.h  barrier_function.h  corridor.h  discrete_points_math.h  discretized_trajectory.h  dp_planner.h  environment.h  idm.h  ilqr_optimizer.h  pid.h  planner_config.h  planning_node.h  pure_pursuit.h  trajectory_planner.h  vehicle_model.h  vehicle_param.h
include/math/: aabox2d.h  box2d.h  line_segment2d.h  math_utils.h  polygon2d.h  pose.h  vec2d.h
include/visualization/: color.h  plot.h
launch/: pedestrian_test.launch
resources/: corridor_generator_1.webm  corridor_generator_2.webm  demo.webm  ilqr_trajectory.webm
script/: pickle_publisher.py  reference_publisher.py  run.sh
src/: corridor.cc  discrete_points_math.cc  discretized_trajectory.cpp  dp_planner.cpp  environment.cpp  ilqr_optimizer.cc  main.cc  planning_node.cc  trajectory_planner.cpp  vehicle_model.cc
src/math/: aabox2d.cpp  box2d.cpp  line_segment2d.cpp  math_utils.cpp  polygon2d.cpp
src/visualization/: color.cpp  plot.cpp
